# contractlens

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/contractlens/: analyzer.py  api.py  app.py  extractor.py  models.py  risk_scorer.py  utils.py
tests/: test_extractor.py
