[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contractlens"
version = "0.1.0"
description = "AI-powered legal contract analysis using BERT and SpaCy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "spacy>=3.7.0",
    "streamlit>=1.35.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.2.0",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contractlens"]
